autogenerate routes
