# backend/api/src/routes/routes.ts
@@ -15,8 +15,8 @@ const models: TsoaRoute.Models = {
     "ShortWordPair": {
         "dataType": "refObject",
         "properties": {
-            "word_original": {"dataType":"string","required":true},
-            "word_translation": {"dataType":"string","required":true},
+            "wordOriginal": {"dataType":"string","required":true},
+            "wordTranslation": {"dataType":"string","required":true},
         },
         "additionalProperties": true,
     },
@@ -25,8 +25,8 @@ const models: TsoaRoute.Models = {
         "dataType": "refObject",
         "properties": {
             "name": {"dataType":"string","required":true},
-            "language_from": {"dataType":"string","required":true},
-            "language_to": {"dataType":"string","required":true},
+            "languageFrom": {"dataType":"string","required":true},
+            "languageTo": {"dataType":"string","required":true},
             "wordpairs": {"dataType":"array","array":{"dataType":"refObject","ref":"ShortWordPair"},"required":true},
         },
         "additionalProperties": true,
@@ -44,8 +44,8 @@ const models: TsoaRoute.Models = {
         "dataType": "refObject",
         "properties": {
             "name": {"dataType":"string","required":true},
-            "language_from": {"dataType":"string","required":true},
-            "language_to": {"dataType":"string","required":true},
+            "languageFrom": {"dataType":"string","required":true},
+            "languageTo": {"dataType":"string","required":true},
             "wordpairs": {"dataType":"array","array":{"dataType":"refObject","ref":"ShortWordPair"},"required":true},
         },
         "additionalProperties": true,
@@ -55,8 +55,8 @@ const models: TsoaRoute.Models = {
         "dataType": "refObject",
         "properties": {
             "name": {"dataType":"string","required":true},
-            "language_from": {"dataType":"string","required":true},
-            "language_to": {"dataType":"string","required":true},
+            "languageFrom": {"dataType":"string","required":true},
+            "languageTo": {"dataType":"string","required":true},
             "wordpairs": {"dataType":"array","array":{"dataType":"refObject","ref":"ShortWordPair"},"required":true},
         },
         "additionalProperties": true,
@@ -67,7 +67,7 @@ const models: TsoaRoute.Models = {
         "properties": {
             "prompt": {"dataType":"string","required":true},
             "history": {"dataType":"array","array":{"dataType":"string"},"required":true},
-            "current_deck": {"ref":"ShortDeckWithWordPairs","required":true},
+            "currentDeck": {"ref":"ShortDeckWithWordPairs","required":true},
         },
         "additionalProperties": true,
     },
@@ -75,13 +75,13 @@ const models: TsoaRoute.Models = {
     "GetAllDecksResponse": {
         "dataType": "refObject",
         "properties": {
-            "id": {"dataType":"string","required":true},
+            "id": {"dataType":"double","required":true},
             "name": {"dataType":"string","required":true},
-            "language_from": {"dataType":"string","required":true},
-            "language_to": {"dataType":"string","required":true},
-            "created_at": {"dataType":"string","required":true},
-            "last_modified": {"dataType":"string","required":true},
-            "wordpair_count": {"dataType":"double","required":true},
+            "languageFrom": {"dataType":"string","required":true},
+            "languageTo": {"dataType":"string","required":true},
+            "createdAt": {"dataType":"string","required":true},
+            "lastModified": {"dataType":"string","required":true},
+            "wordpairCount": {"dataType":"double","required":true},
         },
         "additionalProperties": true,
     },
@@ -89,13 +89,13 @@ const models: TsoaRoute.Models = {
     "GetDeckByIdResponse": {
         "dataType": "refObject",
         "properties": {
-            "id": {"dataType":"string","required":true},
+            "id": {"dataType":"double","required":true},
             "name": {"dataType":"string","required":true},
-            "language_from": {"dataType":"string","required":true},
-            "language_to": {"dataType":"string","required":true},
-            "created_at": {"dataType":"string","required":true},
-            "last_modified": {"dataType":"string","required":true},
-            "wordpair_count": {"dataType":"double","required":true},
+            "languageFrom": {"dataType":"string","required":true},
+            "languageTo": {"dataType":"string","required":true},
+            "createdAt": {"dataType":"string","required":true},
+            "lastModified": {"dataType":"string","required":true},
+            "wordpairCount": {"dataType":"double","required":true},
         },
         "additionalProperties": true,
     },
@@ -103,12 +103,12 @@ const models: TsoaRoute.Models = {
     "GetDeckWordpairsResponse": {
         "dataType": "refObject",
         "properties": {
-            "id": {"dataType":"string","required":true},
-            "deck_id": {"dataType":"string","required":true},
-            "word_original": {"dataType":"string","required":true},
-            "word_translation": {"dataType":"string","required":true},
-            "created_at": {"dataType":"string","required":true},
-            "last_modified": {"dataType":"string","required":true},
+            "id": {"dataType":"double","required":true},
+            "deckId": {"dataType":"double","required":true},
+            "wordOriginal": {"dataType":"string","required":true},
+            "wordTranslation": {"dataType":"string","required":true},
+            "createdAt": {"dataType":"string","required":true},
+            "lastModified": {"dataType":"string","required":true},
         },
         "additionalProperties": true,
     },
@@ -116,13 +116,13 @@ const models: TsoaRoute.Models = {
     "CreateDeckResponse": {
         "dataType": "refObject",
         "properties": {
-            "id": {"dataType":"string","required":true},
+            "id": {"dataType":"double","required":true},
             "name": {"dataType":"string","required":true},
-            "language_from": {"dataType":"string","required":true},
-            "language_to": {"dataType":"string","required":true},
-            "created_at": {"dataType":"string","required":true},
-            "last_modified": {"dataType":"string","required":true},
-            "wordpair_count": {"dataType":"double","required":true},
+            "languageFrom": {"dataType":"string","required":true},
+            "languageTo": {"dataType":"string","required":true},
+            "createdAt": {"dataType":"string","required":true},
+            "lastModified": {"dataType":"string","required":true},
+            "wordpairCount": {"dataType":"double","required":true},
         },
         "additionalProperties": true,
     },
@@ -131,8 +131,8 @@ const models: TsoaRoute.Models = {
         "dataType": "refObject",
         "properties": {
             "name": {"dataType":"string","required":true},
-            "language_from": {"dataType":"string","required":true},
-            "language_to": {"dataType":"string","required":true},
+            "languageFrom": {"dataType":"string","required":true},
+            "languageTo": {"dataType":"string","required":true},
             "wordpairs": {"dataType":"array","array":{"dataType":"refObject","ref":"ShortWordPair"},"required":true},
         },
         "additionalProperties": true,
@@ -141,13 +141,13 @@ const models: TsoaRoute.Models = {
     "UpdateDeckResponse": {
         "dataType": "refObject",
         "properties": {
-            "id": {"dataType":"string","required":true},
+            "id": {"dataType":"double","required":true},
             "name": {"dataType":"string","required":true},
-            "language_from": {"dataType":"string","required":true},
-            "language_to": {"dataType":"string","required":true},
-            "created_at": {"dataType":"string","required":true},
-            "last_modified": {"dataType":"string","required":true},
-            "wordpair_count": {"dataType":"double","required":true},
+            "languageFrom": {"dataType":"string","required":true},
+            "languageTo": {"dataType":"string","required":true},
+            "createdAt": {"dataType":"string","required":true},
+            "lastModified": {"dataType":"string","required":true},
+            "wordpairCount": {"dataType":"double","required":true},
         },
         "additionalProperties": true,
     },
@@ -156,10 +156,10 @@ const models: TsoaRoute.Models = {
         "dataType": "refObject",
         "properties": {
             "name": {"dataType":"string","required":true},
-            "language_from": {"dataType":"string","required":true},
-            "language_to": {"dataType":"string","required":true},
+            "languageFrom": {"dataType":"string","required":true},
+            "languageTo": {"dataType":"string","required":true},
             "wordpairs": {"dataType":"array","array":{"dataType":"refObject","ref":"ShortWordPair"},"required":true},
-            "id": {"dataType":"string","required":true},
+            "id": {"dataType":"double","required":true},
         },
         "additionalProperties": true,
     },
